--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "private": false,
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev --respawn -- src/index.ts"
+    "dev": "ts-node-dev --respawn -- src/index.ts",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/figlet": "^1.2.0",
+    "@types/jest": "^25.1.3",
     "@types/node": "^13.7.7",
+    "jest": "^25.1.0",
+    "ts-jest": "^25.2.1",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
   },
