--- a/package.json
+++ b/package.json
@@ -4,22 +4,27 @@
   "description": "An utility to convert Vue.js Single File Components from Class API to option API.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "repository": "https://github.com/vertcitron/vue-class-to-options.git",
   "author": "Stéphane Souron <stef@vertcitron.fr>",
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "tsc",
-    "dev": "ts-node-dev --respawn -- src/index.ts",
+    "build": "parcel build src/index.ts --target node",
+    "watch": "parcel watch src/index.ts --target node",
+    "dev": "concurrently --kill-others --raw \"yarn watch\" \"nodemon dist/index.js exampledata/testFile.vue\"",
     "test": "jest"
   },
   "devDependencies": {
     "@types/figlet": "^1.2.0",
     "@types/jest": "^25.1.3",
     "@types/node": "^13.7.7",
+    "concurrently": "^5.1.0",
     "jest": "^25.1.0",
+    "parcel-bundler": "^1.12.4",
     "ts-jest": "^25.2.1",
-    "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
   },
   "dependencies": {
