--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   "devDependencies": {
     "@types/figlet": "^1.2.0",
     "@types/jest": "^25.1.3",
+    "@types/mock-fs": "^4.10.0",
     "@types/node": "^13.7.7",
     "concurrently": "^5.1.0",
     "jest": "^25.1.0",
+    "jest-mock-process": "^1.3.2",
+    "mock-fs": "^4.11.0",
     "parcel-bundler": "^1.12.4",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
