--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "scripts": {
     "build": "parcel build src/index.ts --target node",
     "watch": "parcel watch src/index.ts --target node",
-    "dev": "concurrently --kill-others --raw \"yarn watch\" \"nodemon dist/index.js exampledata/testFile.vue\"",
+    "dev": "ts-node-dev --respawn --clear --watch src/tests/test1.vue src/index.ts src/tests/test1.vue",
     "test": "jest"
   },
   "devDependencies": {
+    "@types/chalk": "^2.2.0",
     "@types/figlet": "^1.2.0",
     "@types/jest": "^25.1.3",
     "@types/mock-fs": "^4.10.0",
@@ -28,10 +29,10 @@
     "mock-fs": "^4.11.0",
     "parcel-bundler": "^1.12.4",
     "ts-jest": "^25.2.1",
+    "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@types/chalk": "^2.2.0",
     "chalk": "^3.0.0",
     "figlet": "^1.3.0",
     "fs": "^0.0.1-security"
