--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   "dependencies": {
     "chalk": "^3.0.0",
     "figlet": "^1.3.0",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "vue-class-decorator": "^7.6.3",
+    "vuex": "^3.1.2"
   }
 }
