--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^13.7.7",
     "concurrently": "^5.1.0",
     "jest": "^25.1.0",
+    "jest-mock-console": "^1.0.0",
     "jest-mock-process": "^1.3.2",
     "mock-fs": "^4.11.0",
     "parcel-bundler": "^1.12.4",
