--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "build": "parcel build src/index.ts --target node",
     "watch": "parcel watch src/index.ts --target node",
+    "start": "yarn build && node dist/index.js",
     "dev": "ts-node-dev --respawn --clear src/index.ts",
     "test": "jest"
   },
