--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "scripts": {
     "build": "parcel build src/index.ts --target node",
     "watch": "parcel watch src/index.ts --target node",
-    "start": "yarn build && node dist/index.js",
-    "dev": "ts-node-dev --respawn --clear src/index.ts",
+    "start": "yarn build && node bin/classToOptions.js",
+    "dev": "ts-node-dev --respawn --clear src/run.ts",
     "test": "jest"
   },
   "devDependencies": {
