--- a/package.json
+++ b/package.json
@@ -26,13 +26,8 @@
     "@types/chalk": "^2.2.0",
     "@types/figlet": "^1.2.0",
     "@types/jest": "^25.1.3",
-    "@types/mock-fs": "^4.10.0",
     "@types/node": "^13.7.7",
-    "concurrently": "^5.1.0",
     "jest": "^25.1.0",
-    "jest-mock-console": "^1.0.0",
-    "jest-mock-process": "^1.3.2",
-    "mock-fs": "^4.11.0",
     "parcel-bundler": "^1.12.4",
     "ts-jest": "^25.2.1",
     "ts-node-dev": "^1.0.0-pre.44",
@@ -41,8 +36,6 @@
   "dependencies": {
     "chalk": "^3.0.0",
     "figlet": "^1.3.0",
-    "fs": "^0.0.1-security",
-    "vue-class-decorator": "^7.6.3",
-    "vuex": "^3.1.2"
+    "fs": "^0.0.1-security"
   }
 }
