--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@types/node": "^13.7.7",
     "jest": "^25.1.0",
     "parcel-bundler": "^1.12.4",
+    "rollup": "^2.0.3",
+    "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-typescript2": "^0.26.0",
     "ts-jest": "^25.2.1",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
@@ -36,6 +39,7 @@
   "dependencies": {
     "chalk": "^3.0.0",
     "figlet": "^1.3.0",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7"
   }
 }
