--- a/package.json
+++ b/package.json
@@ -2,8 +2,6 @@
   "name": "vue-class-to-options",
   "version": "0.0.7",
   "description": "An utility to convert Vue.js Single File Components from Class API to option API.",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
@@ -16,10 +14,10 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "parcel build src/index.ts --target node --no-minify",
-    "watch": "parcel watch src/index.ts --target node",
+    "build": "tsc",
+    "watch": "yarn build && tsc --watch",
     "start": "yarn build && node bin/classToOptions.js",
-    "dev": "ts-node-dev --respawn --clear src/run.ts",
+    "dev": "ts-node-dev --respawn --clear src/index.ts",
     "test": "jest"
   },
   "devDependencies": {
@@ -28,10 +26,6 @@
     "@types/jest": "^25.1.3",
     "@types/node": "^13.7.7",
     "jest": "^25.1.0",
-    "parcel-bundler": "^1.12.4",
-    "rollup": "^2.0.3",
-    "rollup-plugin-terser": "^5.3.0",
-    "rollup-plugin-typescript2": "^0.26.0",
     "ts-jest": "^25.2.1",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
