--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
     "figlet": "^1.3.0",
     "fs": "^0.0.1-security",
     "path": "^0.12.7"
+  },
+  "resolutions": {
+    "acorn": "^6.4.1",
+    "minimist": "^1.2.3"
   }
 }
